# Korean-FastSpeech2-Pytorch-C-

./: .gitignore
lib/: CMakeLists.txt  fastspeech.cpp  fastspeech.h  fastspeech.pc.in  misc.cpp  misc.h  utils.cpp  utils.h
src/: CMakeLists.txt  build.sh  example-app.cpp  example-app.out
